    7 secs.. This is to avoid a concurrent access in case of a monitor restart
    or a "Schedule a check of all services on this host"
  - In case of a locked session file the wait loop is not fix to 1 sec any more.
    Instead of this it uses a random period up to 5 sec.. So we minimize the risc
    of concurrent access.

- 7 Mar 2014 M.Fuerstenau version 0.9.11
  - Updated README
    - Section for removing HTML tags was reworked
  - Added blacklist to host_net_info() so that interfaces with -S net can
    be blacklisted.

- 11 Mar 2014 M.Fuerstenau version 0.9.12
  - Changed sleep() to usleep() and using now microseconds instead of seconds
  - So before accessing the session file (and lock file) we now have a random sleep
    up to 1500 milliseconds (default - see $ms_ts). This is to avoid a concurrent access
    in case of a monitor restart or a "Schedule a check of all services on this host"
    but takes much less time while having much more alternatives.
  - In case of a locked session file the wait loop is not fix to a random period up to
    5 sec. any more. Instead of this it uses also $ms_ts which means a max of 1.5 secs.
    instead of 5.

- 3 Apr 2014 M.Fuerstenau version 0.9.13
  - --trace=<tracelevel> was not working. Fixed. Small typo.
  - Removed comment sign in front of unlink around. It was there due to some
    some tests and I had forgotten to remove it.
  - datastore_volumes_info(). Some bugs corrected.
    - Wrong percent calculation
    - Wrong processing of thresholds for usedspace
    - Wrong processing for thresholds which are not percent
    - If threshold is in percent it is calculated in MB/GB for perfdata
      because mixing percent and MB/GB doesn't make sense.

- 5 Apr 2014 M.Fuerstenau version 0.9.14
  - host_runtime_info()
    - Fixed some bugs with issues ignored and whitelist. Some counters were calculated
      wrong
  - New plausibility check to ensured that blacklist and whitelist can not be used together.