@@ -5,6 +5,8 @@ sub host_cpu_info
     my $output;
     my $host_view;
     my $value;
+    my $perf_val_error = 1;      # Used as a flag when getting all the values 
+                                 # with one call won't work.
     my $actual_state;            # Hold the actual state for to be compared
     my $true_sub_sel=1;          # Just a flag. To have only one return at the en
                                  # we must ensure that we had a valid subselect. If
@@ -13,7 +15,12 @@ sub host_cpu_info
                                  # 1 -> non existing subselect
 
     $values = return_host_performance_values($host,'cpu', ('wait.summation:*','ready.summation:*', 'usage.average'));
-
+        
+    if (defined($values))
+       {
+       $perf_val_error = 0;
+       }
+       
     if (!defined($subselect))
        {
        # This means no given subselect. So all checks must be performemed
@@ -25,6 +32,12 @@ sub host_cpu_info
     if (($subselect eq "wait") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          $values = return_host_performance_values($host,'cpu', ('wait.summation:*'));
+          }
+
        if (defined($values))
           {
           $value = simplify_number(convert_number($$values[0][0]->value));
@@ -50,9 +63,23 @@ sub host_cpu_info
     if (($subselect eq "ready") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          $values = return_host_performance_values($host,'cpu', ('ready.summation:*'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][1]->value));
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value));
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][1]->value));
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - CPU ready=" . $value . " ms";
@@ -84,9 +111,23 @@ sub host_cpu_info
     if (($subselect eq "usage") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          $values = return_host_performance_values($host,'cpu', ('usage.average'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][2]->value) * 0.01);
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value) * 0.01);
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][2]->value) * 0.01);
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - CPU usage=" . $value . "%"; 
