@@ -10,6 +10,8 @@ sub host_mem_info
     my $vm_views;
     my @vms = ();
     my $index;
+    my $perf_val_error = 1;      # Used as a flag when getting all the values 
+                                 # with one call won't work.
     my $actual_state;            # Hold the actual state for to be compared
     my $true_sub_sel=1;          # Just a flag. To have only one return at the en
                                  # we must ensure that we had a valid subselect. If
@@ -18,7 +20,12 @@ sub host_mem_info
                                  # 1 -> non existing subselect
     
     ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'usage.average', 'consumed.average','swapused.average', 'overhead.average', 'vmmemctl.average'));
-
+        
+    if (defined($values))
+       {
+       $perf_val_error = 0;
+       }
+       
     if (!defined($subselect))
        {
        # This means no given subselect. So all checks must be performemed
@@ -36,6 +43,12 @@ sub host_mem_info
     if (($subselect eq "usage") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'usage.average'));
+          }
+
        if (defined($values))
           {
           $value = simplify_number(convert_number($$values[0][0]->value) * 0.01);
@@ -63,9 +76,23 @@ sub host_mem_info
     if (($subselect eq "consumed") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'consumed.average'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][1]->value) / 1024);
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value) / 1024);
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][1]->value) / 1024);
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - consumed memory=" . $value . " MB";
@@ -99,10 +126,23 @@ sub host_mem_info
     if (($subselect eq "swapused") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
-       
+
+       if ($perf_val_error == 1)
+          {
+          ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'swapused.average'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][2]->value) / 1024);
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value) / 1024);
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][2]->value) / 1024);
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - swap used=" . $value . " MB";
@@ -173,9 +213,23 @@ sub host_mem_info
     if (($subselect eq "overhead") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'overhead.average'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][3]->value) / 1024);
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value) / 1024);
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][3]->value) / 1024);
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - overhead=" . $value . " MB";
@@ -209,9 +263,23 @@ sub host_mem_info
     if (($subselect eq "memctl") || ($subselect eq "all"))
        {
        $true_sub_sel = 0;
+
+       if ($perf_val_error == 1)
+          {
+          ($host_view, $values) = return_host_performance_values($host, 'mem', ( 'vmmemctl.average'));
+          }
+
        if (defined($values))
           {
-          $value = simplify_number(convert_number($$values[0][4]->value) / 1024);
+          if ($perf_val_error == 1)
+             {
+             $value = simplify_number(convert_number($$values[0][0]->value) / 1024);
+             }
+          else
+             {
+             $value = simplify_number(convert_number($$values[0][4]->value) / 1024);
+             }
+
           if ($subselect eq "all")
              {
              $output = $output . " - memctl=" . $value . " MB: ";
